Expanded Cheat Menu:
### Fixed:
- Issue with Rocket>Change Resupply Settings (skipped boolean options), also added a reset checkbox.

Rocket settings work for Supply pods.
Examine All toggle isn't global anymore.
Added some gagarin cheats to Cheats menu:
StoryBits ClearCooldowns
Spawn Planetary Anomalies

Lib v3.1:
- Popup menus close when parent closes.

Orbital Prefab Drops v0.4:
Dropping into a dome will crack it (turn off with ModConfig).

RC Garage v0.1:
Massive underground connected parking garage for idle rovers, so you don't need to go looking for them.
The more stored the more electricity it uses (0.5 per), and you can't remove any rovers if the building isn't working.

The first placed garage is the one that uses power the rest will draw it from (unless you remove it then it's a randomly different one).
Each added garage is another 1 electricity use.

Comes with built-in rover wash.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,8 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001392,,
-302535920001393,,
-302535920001394,,
-302535920001395,,
 302535920001396,,
 302535920001397,,
 302535920001398,,
@@ -484,6 +480,10 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920001392,Clears story bit cooldowns... (got me).,
+302535920001393,StoryBits ClearCooldowns,
+302535920001394,Spawn Planetary Anomalies,
+302535920001395,Adds Anomaly locations to Planetary View.,
 302535920000250,Default mapdata type,
 302535920001372,Change the number on the end to fire that amount (ex: %s25).,
 302535920001373,Lightning Strike,
@@ -544,7 +544,6 @@ See also %s.",
 302535920000234,Cheats menu save position,
 302535920000235,"Save your game.
 This will switch to a new map.",
-302535920000237,Okay (change map),
 302535920000238,"Are you sure you want to reset all research (includes breakthrough tech)?
 
 Buildings are still unlocked.",
@@ -967,6 +966,7 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 Green = pass/build, Yellow = no pass/build,
 Blue = pass/no build, Red = no pass/no build.
 See Help>%s to increase size.",
+302535920000237,Check this to reset settings.,
 302535920001317,Launch Fuel Per Rocket,
 302535920001318,Change how much fuel rockets need to launch.,
 302535920001319,Rockets Ignore Fuel,
@@ -991,7 +991,7 @@ See Help>%s to increase size.",
 302535920000896,Drones in hub,
 302535920000897,Drone prefabs,
 302535920000898,Dismantle,
-302535920000899,Check this to dismantle drones in hub,
+302535920000899,Check this to dismantle drones in hub.,
 302535920000900,Build Speed,
 302535920000901,Set Drone Factory Build Speed,
 302535920000902,%s: What happens when the drones get into your Jolt Cola supply...,
