Expanded Cheat Menu:
Debug>Set Anim State doesn't close after picking it.

### Added:
- Buildings>Toggles>Sponsor Building Limits: Gagarin added buildings limited to specific sponsors, use this to toggle limits.
+### Changed:
+- Write Logs skips print (AddConsoleLog shows the same and more).

Lib:
Some funcs/strings added.
Moved all my buildings/vehicles into their own category.

RC Garage v0.2:
Support for rovers from Patriot Missile Defense System/Mission Sponsor - NASA.
Added an Eject All button to main garage (just in case).

Mods:
Updated my RC mods to work with Gagarin.
Bulldozer uses Harvester model if you have Gagarin.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/RC Bulldozer/changes.txt
+++ b/Mods ChoGGi/RC Bulldozer/changes.txt
@@ -1,3 +1,7 @@
+v0.6
+Gagarin.
+Uses Harvester model if you have Gagarin.
+
 v0.5
 Sped up the method I used to make ground drivable, but now it'll block objects from being placed nearby when Dozer Toggle is enabled.
 Dozer body colour is changed while Dozer Toggle is enabled, so you know to turn if off when idle.
