--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001401,,
 302535920001402,,
 302535920001403,,
 302535920001404,,
@@ -165,6 +164,7 @@ You can copy and paste numbers if you want.",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any %s.,
 302535920000032,Select a resource to find,
+302535920001401,"Removed missing mod building from %s: %s, entity: %s, handle: %s",
 302535920001074,Ged Presets Editor,
 302535920000503,Right-click an item/submenu to add/remove it from the quickbar.,
 302535920001309,"Stop showing these msgs: Press Tilde or Enter and click the ""%s"" button then uncheck ""%s"".",
