Expanded Cheat Menu: ### Changed: - Updated Export Colonist Data to CSV with missing traits.
Version bump.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -960,7 +960,7 @@ See the examine list for ids.",
 302535920000879,"Doesn't add the little flags, just lines and spheres (good for larger maps).",
 302535920000454,Fires some commands to reload lua files (use OnMsg.ReloadLua() to listen for it).,
 302535920000874,(see Path Markers to mark more than one at a time).,
-302535920001208,Export Colonist Data To CSV,
+302535920001208,Export Colonist Data to CSV,
 302535920001219,Exports data about colonists to %sColonists.csv,
 302535920001176,Toggle showing FX debug info in console.,
 302535920001184,Particles,
