Expanded Cheat Menu:
### Added:
- Mission>Drone Type: Change what type of drones will spawn (doesn't affect existing).

### Changed:
- Change Amount of Drones in Hub: Now works with any drone controller (also changed Dismantle to Pack Drones).

### Fixed:
- Examine was showing certain associative tables as 0 length.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,8 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001403,,
-302535920001404,,
-302535920001405,,
-302535920001406,,
 302535920001407,,
 302535920001408,,
 302535920001409,,
@@ -1032,7 +1028,7 @@ See Help>%s to increase size.",
 302535920000511,Drone Move Speed,
 302535920000543,RC Move Speed,
 302535920000746,added,
-302535920000917,dismantled,
+302535920000917,packed,
 302535920000880,Set Rover Charge Radius,
 302535920000883,%s: I can see for miles and miles.,
 302535920000884,Set Rover Work Radius,
@@ -1044,8 +1040,8 @@ See Help>%s to increase size.",
 302535920000895,Change Amount Of Drones,
 302535920000896,Drones in hub,
 302535920000897,Drone prefabs,
-302535920000898,Dismantle,
-302535920000899,Check this to dismantle drones in hub.,
+302535920000898,Pack Drones,
+302535920000899,Check this to pack drone(s) into prefabs (number can be higher than attached drones).,
 302535920000900,Build Speed,
 302535920000901,Set Drone Factory Build Speed,
 302535920000902,%s: What happens when the drones get into your Jolt Cola supply...,
@@ -1082,7 +1078,7 @@ See Help>%s to increase size.",
 302535920000508,Change DroneHub drone radius (this ignores slider).,
 302535920000510,How long it takes drones to convert rock to concrete.,
 302535920000512,How fast drones will move.,
-302535920000513,Change Amount Of Drones In Hub,
+302535920000513,Change Amount of Drones in Hub,
 302535920000514,Select a DroneHub then change the amount of drones in said hub (dependent on prefab amount).,
 302535920000515,DroneFactory Build Speed,
 302535920000516,Change how fast drone factories build drones.,
@@ -1589,6 +1585,10 @@ AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000701,Queue up to 100 squares.,
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
+302535920001403,Drone Type,
+302535920001404,Change what type of drones will spawn (doesn't effect existing).,
+302535920001405,Drones will now spawn as: %s,
+302535920001406,"Hubs can only have one type of drone, so you'll need pack/unpack all drones for each hub you wish to change (or use Drones>%s).",
 302535920001357,Exclusion List,
 302535920000716,Set Commander,
 302535920000712,Set Sponsor,
