Expanded Cheat Menu:
### Changed:
- Prefab Buildings now lists almost all buildings.
- Cheats panel:
- > Added some icons to it (suggestions welcome).
- > Stopped it from being hidden on mouseover (causes flicker and they resize the panel anyways).

### Fixed:
- Instant Mission Goals now works with the list of goals (you can pick which you want to pass).
- Hidden Buildings didn't work (messed up build menu).

Construction: Show Dust Grid v0.1:
Show Dust Grids during construction.

Fix: Expedition Rocket Stuck Unloading v0.1:
This will check on load game for certain rockets stuck on the ground unable to do jack.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001409,,
 302535920001410,,
 302535920001411,,
 302535920001412,,
@@ -168,6 +167,7 @@ You can copy and paste numbers if you want.",
 302535920000732,"Childkiller: You evil, evil person.",
 302535920000733,Open a preset in the editor.,
 302535920000735,Timer delay skipped,
+302535920000162,Need,
 302535920000083,<left_click> Activate,
 302535920000060,Instantly complete building without needing resources.,
 302535920001277,Open %s in the Object Examiner.,
@@ -454,8 +454,6 @@ So we got rid of the auto and stopped off at the Korova for a nightcap.",
 302535920000160,"%s: Freedom for spires!
 (restart to set disabled).",
 302535920000161,%s: Buildings Instant Build,
-302535920000162,"%s: Hidden Buildings
-(restart to toggle).",
 302535920000163,Radius,
 302535920001241,Instant Build,
 302535920000164,Storage Amount Of Diner & Grocery,
@@ -521,7 +519,7 @@ Works on any building that produces.",
 302535920000221,are built instantly.,
 302535920000223,Unlimited wonder build limit.,
 302535920000224,Show Hidden Buildings,
-302535920000225,Show hidden buildings (restart game to toggle).,
+302535920000225,Show hidden buildings in build menu.,
 302535920000226,Remove Spire Point Limit,
 302535920000227,"Build spires anywhere in domes.
 Use with %s to fill up a dome with spires.",
@@ -1142,7 +1140,7 @@ Fix with: %s",
 302535920001270,Weight Per Item,
 302535920001271,Price Per Item,
 302535920001121,Edit value for each setting you wish to change then press OK to save.,
-302535920001191,%s %s prefabs have been added.,
+302535920001191,Added prefabs to %s buildings.,
 302535920000936,Something you'd like to see added?,
 302535920000937,Laggy with lots of colonists.,
 302535920000940,Select something to monitor.,
@@ -1585,6 +1583,7 @@ AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000701,Queue up to 100 squares.,
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
+302535920001409,Goal,
 302535920001403,Drone Type,
 302535920001404,Change what type of drones will spawn (doesn't effect existing).,
 302535920001405,Drones will now spawn as: %s,
@@ -1620,10 +1619,8 @@ The end of mankind. Doesn't matter where it hits. Nothing would survive, not eve
 302535920000966,"Set the occurrence level of %s disasters.
 Current: %s",
 302535920000965,"Change the ""Game Rules"".",
-302535920000704,Instant Mission Goal,
-302535920000705,"Mission goals are finished instantly (pretty sure the only difference is preventing a msg).
-
-Needs to change Sol to update.",
+302535920000704,Instant Mission Goals,
+302535920000705,Shows list of mission goals and allows you to pass any of them.,
 302535920000706,Instant Colony Approval,
 302535920000707,Make your colony instantly approved (can be called before you summon your first victims).,
 302535920000708,Meteor Damage,
