--- a/Mods ChoGGi/Personal Shuttles/changes.txt
+++ b/Mods ChoGGi/Personal Shuttles/changes.txt
@@ -1,3 +1,7 @@
+v0.7
+Hides pickup item buttons if there's no shuttles out.
+Gagarin messed up attacker colour.
+
 v0.6
 Library update.
 
@@ -5,10 +9,13 @@ v0.5
 Sagan.
 Added pick up/drop anims.
 Nearby drones will use resources from moved piles.
+
 v0.4
 Just updating code to parity with ECM code and steam version.
+
 v0.3
 Curiosity update
+
 v0.2
 Changed:
 Follower shuttles now break path when you move the mouse (they do get confused at times, figured decent tradeoff).
