--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001410,Toggle Visibility,
-302535920001411,,
 302535920001412,,
 302535920001413,,
 302535920001414,,
@@ -108,6 +106,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000201,Active,
 302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
+302535920001411,ECM has been disabled. Change DisableECM to false in settings file.,
 302535920001383,AddXTemplate borked template name: %s template: %s list: %s,
 302535920000013,This shouldn't happen... Well shit something's bork bork bork.,
 302535920000002,Dumped: %s,
@@ -166,6 +165,7 @@ You can copy and paste numbers if you want.",
 302535920000731,Deutsche Gesellschaft für Rassenhygiene,
 302535920000732,"Childkiller: You evil, evil person.",
 302535920000733,Open a preset in the editor.,
+302535920001410,Toggle Visibility,
 302535920000735,Timer delay skipped,
 302535920000162,Need,
 302535920000083,<left_click> Activate,
@@ -206,8 +206,8 @@ Reselect to update display.",
 302535920001249,Change this %s so it needs a oxygen source.,
 302535920001223,Hides any signs above %s (until state is changed).,
 302535920001224,Changes colour of %s to random colours (doesn't change attachments).,
-302535920001225,Add visual dust and maintenance points.,
-302535920001226,You may need to use AddDust before using this to change the building visually.,
+302535920001225,Adds dust and maintenance points.,
+302535920001226,Cleans dust and removes maintenance points.,
 302535920001227,Turns object into ruin.,
 302535920001228,Set the stored amount of this %s to 0.,
 302535920001230,"Empties the storage of this building.
@@ -235,7 +235,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001379,Opens up the window inspector with terminal.desktop.,
 302535920001287,Instead of a single line, you can enter/execute code in a textbox.,
 302535920000473,Reload ECM Menu,
-302535920000474,Fiddling around in the editor mode can break the menu / shortcuts added by ECM (use this to fix).,
+302535920000474,Fiddling around in the editor mode can break the menu / shortcuts added by ECM (use this to fix or alt-tab).,
 302535920001308,Settings,
 302535920000734,Clear Log,
 302535920001026,Show File Log,
@@ -549,8 +549,6 @@ See also %s.",
 302535920000266,Spawn,
 302535920000295,Add Research Points,
 302535920000232,Draggable Cheats Menu,
-302535920000321,Toggle Width Of Cheats Menu On Hover,
-302535920000322,Makes the cheats menu just show Cheats till mouseover (restart to take effect).,
 302535920000324,Cheats menu can be moved (restart to toggle).,
 302535920000325,Keep Cheats Menu Position,
 302535920000326,This menu will stay where you drag it.,
@@ -1418,6 +1416,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920000321,Enable ToolTips,
+302535920000322,Disabling this will remove most of the tooltips (leaves the cheat menu and cheats pane ones).,
 302535920001387,Toggle Signs,
 302535920001388,"Concrete, metal deposits, not working, etc...",
 302535920000664,Clipboard,
@@ -1448,7 +1448,7 @@ Not noticeable unless using higher zoom.",
 302535920001244,"Saves settings to file, and applies any changes.",
 302535920001245,Abort without touching anything.,
 302535920000466,"This will disable the cheats menu, cheats panel, and all hotkeys.
-CheatMenuModSettings.lua > DisableECM to re-enable them.",
+Change DisableECM to false in settings file to re-enable them.",
 302535920001068,%s: Interface in screenshots.,
 302535920001069,Interface,
 302535920001070,Restart to take effect.,
@@ -1636,7 +1636,7 @@ restart to set disabled.",
 302535920000717,Switch to a different commander.,
 302535920000718,Set Bonuses Commander,
 302535920001380,Report Bug,
-302535920001381,Opens the bug report dialog (this will fill AppData\BugReport folder with screenshots).,
+302535920001381,Opens the bug report dialog (this will add a screenshot to AppData\BugReport).,
 302535920001346,Random Colour,
 302535920001347,Show Console,
 302535920001348,Restart,
