Expanded Cheat Menu:
Version bump.

All Sponsor Buildings v0.1:
Removes sponsor limit placed on certain buildings/vehicles.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1417,7 +1417,7 @@ Not noticeable unless using higher zoom.",
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
 302535920000321,Enable ToolTips,
-302535920000322,Disabling this will remove most of the tooltips (leaves the cheat menu and cheats pane ones).,
+302535920000322,Disabling this will remove most of the tooltips (not cheats menu/pane).,
 302535920001387,Toggle Signs,
 302535920001388,"Concrete, metal deposits, not working, etc...",
 302535920000664,Clipboard,
