Expanded Cheat Menu:
### Added:
- Help>Interface>GUI Dock Side: Change which side (most) GUI menus are on.

### Fixed:
- Edit ECM Settings blanked out UserSettings when using HelperMod (just in-game, the actual settings are fine after restart).

Lib:
- Changed my msg func to use an object that works in the main menu as well as in-game.

Move HUD Buttons v0.1:
This moves the middle to the left, and the left to the middle.
Pause On Load v0.1:
Pauses the game when you start a new game or load a saved one.
Rightside Menus v0.1:
Not everyone likes change for change's sake. Designers gotta design?
I'd like to know the reasoning behind moving the menus from the right side to the left side...

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001412,,
-302535920001413,,
 302535920001414,,
 302535920001415,,
 302535920001416,,
@@ -1416,6 +1414,8 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001412,GUI Dock Side,
+302535920001413,Change which side the GUI menu is on (this also changes the HUD buttons back).,
 302535920000321,Enable ToolTips,
 302535920000322,Disabling this will remove most of the tooltips (not cheats menu/pane).,
 302535920001387,Toggle Signs,
