Expanded Cheat Menu:
ChoGGi.ComFuncs.MonitorTableLength(obj,skip_under,pad_to,sortby)
-- sortby: nil = table length, 1 = alpha
-- skip_under: don't show any tables under this length
-- pad_to: needed for sorting in examine (prefixes zeros to length)

### Changed:
- Spawn Planetary Anomalies is now a list (I limited the func to fire once before to skip an inf loop in GenerateMarsScreenPoI).
- Added names to the number key build menu key bindings.
- More functionaly added to cheats pane.

### Fixed:
- ECM was hiding some of the outdoor decorations from a fix I did for users with ECM and without Mysteries DLC (thanks SkiRich/Eaglescout93).

Alien Visitors v0.1:
It'll spawn a few aliens that walk around. Maybe I'll add some sort of ship drop-off anim...
There's a ModConfig option to set the max spawned amount, it'll only work on new games or games that don't have aliens.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,8 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001414,,
+302535920000853,,
+302535920001247,,
+302535920001248,,
+302535920001249,,
 302535920001415,,
 302535920001416,,
 302535920001417,,
@@ -173,12 +176,8 @@ You can copy and paste numbers if you want.",
 302535920000005,Drops a new colonist in selected dome.,
 302535920001246,Changes colour of %s back to default.,
 302535920000885,Permanently delete %s,
-302535920001199,"Double the amount of colonist slots for this %s.
-
-Reselect to update display.",
-302535920001200,"Reset the capacity of colonist slots for this %s.
-
-Reselect to update display.",
+302535920001199,Double the amount of colonist slots for this building.,
+302535920001200,Reset the capacity of colonist slots for this building.,
 302535920001202,Fill all stat bars.,
 302535920001203,Double %s's performance.,
 302535920001204,Reset %s's performance to default.,
@@ -191,18 +190,14 @@ Reselect to update display.",
 302535920001211,Double the export storage capacity of this %s.,
 302535920001212,Double the storage capacity of this %s.,
 302535920001213,Reset the storage capacity of this %s to default.,
-302535920001214,sticks small depot in front of mech depot and moves all resources to it (max of 20 000).,
+302535920001214,Sticks small depot in front of mech depot and moves all resources to it (max of 20 000).,
 302535920001215,Turn on all work shifts.,
 302535920001216,Double the battery capacity.,
 302535920001217,Double the shuttles this ShuttleHub can control.,
 302535920001218,Selects nearest storage containing specified resource (shows list of resources).,
-302535920001220,Change this %s so it doesn't need a power source.,
-302535920001221,Change this %s so it needs a power source.,
-302535920000853,Change this %s so it doesn't need a water source.,
-302535920001247,Change this %s so it needs a water source.,
-302535920001248,Change this %s so it doesn't need a oxygen source.,
-302535920001249,Change this %s so it needs a oxygen source.,
-302535920001223,Hides any signs above %s (until state is changed).,
+302535920001220,Change this %s so it doesn't need a %s source.,
+302535920001221,Change this %s so it needs a %s source.,
+302535920001223,Toggle any signs above %s (until state is changed).,
 302535920001224,Changes colour of %s to random colours (doesn't change attachments).,
 302535920001225,Adds dust and maintenance points.,
 302535920001226,Cleans dust and removes maintenance points.,
@@ -358,7 +353,7 @@ Double click selected item to open in new manipulator.",
 302535920000103,Edit Value,
 302535920001407,Rotate During Placement,
 302535920001408,Allow you to rotate all buildings.,
-302535920001398,Sponsor Building Limits,
+302535920001398,Remove Sponsor Limits,
 302535920001399,Allow you to build all buildings no matter your sponsor.,
 302535920000064,Build On Geysers,
 302535920000065,Allows you to build on geysers. Use Shift-F4 around the area to delete the geyser objects (about 10-20 depending on size).,
@@ -1415,7 +1410,7 @@ Not noticeable unless using higher zoom.",
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
 302535920001412,GUI Dock Side,
-302535920001413,Change which side the GUI menu is on (this also changes the HUD buttons back).,
+302535920001413,Change which side (most) GUI menus are on.,
 302535920000321,Enable ToolTips,
 302535920000322,Disabling this will remove most of the tooltips (not cheats menu/pane).,
 302535920001387,Toggle Signs,
@@ -1635,6 +1630,7 @@ Current: %s",
 restart to set disabled.",
 302535920000717,Switch to a different commander.,
 302535920000718,Set Bonuses Commander,
+302535920001414,Build menu key: %s,
 302535920001380,Report Bug,
 302535920001381,Opens the bug report dialog (this will add a screenshot to AppData\BugReport).,
 302535920001346,Random Colour,
