Expanded Cheat Menu:
Cleaned up MonitorTableLength.
Added it to Examine>_G
Added a Sort checkbox to examine.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000853,,
-302535920001247,,
-302535920001248,,
+302535920001248,Sort normally or backwards.,
 302535920001249,,
 302535920001415,,
 302535920001416,,
@@ -222,6 +220,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920000853,Monitor Threads,
+302535920001247,Monitor _G Tables,
 302535920001376,Auto Update List,
 302535920001377,Update this list when ECM updates it.,
 302535920001378,XWindow Inspector,
@@ -467,7 +467,7 @@ Will be overridden by %s.",
 302535920000178,Protection Radius,
 302535920000179,Change threat protection coverage distance.,
 302535920000180,Unlock Locked Buildings,
-302535920000181,Gives you a list of buildings you can unlock in the build menu.,
+302535920000181,"Gives you a list of buildings you can unlock in the build menu (doesn't apply to sponsor limited ones, see Toggles\%s).",
 302535920000182,Pipes Pillars Spacing,
 302535920000183,Only place Pillars at start and end.,
 302535920000184,Unlimited Connection Length,
