Expanded Cheat Menu:
Changed how examine shows threads (easier to see what func it uses to get info).
Added some table monitoring to Console>Examine>_G.

### Added:
- Mission>Start Challenge: Shows a list of challenges you can start (replaces current).

Orbital Prefab Drops v0.5:
Uses supply pod model now.
It now takes back off after prefab is setup.
No more falling rockets.
It doesn't do passages anymore, since they're a bit off hex.
Added  a ModConfig option for the model.

Show Resource Overview v0.3:
Broke in Gagarin (thanks Rentha).
Changed default shortcut from O to [ (O is mission goals).
Cleaning up code (ChoGGi's Library).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001249,,
-302535920001415,,
-302535920001416,,
+302535920001359,"Just lists them for now, I'll make it force them soonish.",
+302535920001416,Force,
 302535920001417,,
 302535920001418,,
 302535920001419,,
@@ -219,8 +218,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
-302535920000853,Monitor Threads,
-302535920001247,Monitor _G Tables,
+302535920000853,Monitor,
 302535920001376,Auto Update List,
 302535920001377,Update this list when ECM updates it.,
 302535920001378,XWindow Inspector,
@@ -265,8 +263,6 @@ Check the actual object/g_Classes.object for the correct value to use (Entity > 
 302535920000058,Mark All Objects,
 302535920000056,Mark all items in objlist with green spheres.,
 302535920001369,Ged Editor,
-302535920001359,debug.getinfo() level,
-302535920001358,debug.upvalue() level,
 302535920001353,Thread info,
 302535920000016,Remove any green spheres/reset green coloured objects.,
 302535920000021,Mark object with green sphere and/or paint.,
@@ -887,6 +883,7 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001358,Group,
 302535920001382,Real Time,
 302535920001368,Sound FX,
 302535920000724,Show Grid Square,
@@ -1578,6 +1575,9 @@ AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000701,Queue up to 100 squares.,
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
+302535920001247,Start Challenge,
+302535920001249,Shows a list of challenges you can start (replaces current).,
+302535920001415,Sols to Complete: %s,
 302535920001409,Goal,
 302535920001403,Drone Type,
 302535920001404,Change what type of drones will spawn (doesn't effect existing).,
