Expanded Cheat Menu:
### Changed:
- Exposed settings for the Shift-F2 grid (debug>grids).

Lib:
- Fixed shuttles not paying attention to newly added/removed hills/rocks.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,10 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001359,"Just lists them for now, I'll make it force them soonish.",
-302535920001416,Force,
-302535920001417,,
-302535920001418,,
-302535920001419,,
-302535920001420,,
 302535920001421,,
 302535920001422,,
 302535920001423,,
@@ -883,6 +877,12 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001417,Follow Mouse Grid Size,
+302535920001418,Sets the size of the grid...,
+302535920001419,Follow Mouse Grid Trans,
+302535920001420,How transparent the grid is.,
+302535920001359,"Just lists them for now, I'll make it force them soonish.",
+302535920001416,Force,
 302535920001358,Group,
 302535920001382,Real Time,
 302535920001368,Sound FX,
@@ -1000,8 +1000,7 @@ The map disaster settings don't do jack (use ECM>Mission>Disasters).",
 302535920000499,Toggle Grid Follow Mouse,
 302535920000500,"Show a hex grid around mouse:
 Green = pass/build, Yellow = no pass/build,
-Blue = pass/no build, Red = no pass/no build.
-See Help>%s to increase size.",
+Blue = pass/no build, Red = no pass/no build.",
 302535920000237,Check this to reset settings.,
 302535920001317,Launch Fuel Per Rocket,
 302535920001318,Change how much fuel rockets need to launch.,
