--- a/Mods ChoGGi/Construction Show Dome Passage Line/changes.txt
+++ b/Mods ChoGGi/Construction Show Dome Passage Line/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+Thought I got all the marker objects, guess not.
+
 v0.6
 Mod left marker objects in game, so you'd get some console spam if you removed it from a save.
 Wouldn't cause problems, just the spam.
