Expanded Cheat Menu:
I broke clicking on points in examine (some of them).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Fix Rocket Stuck/changes.txt
+++ b/Mods ChoGGi/Fix Rocket Stuck/changes.txt
@@ -1,2 +1,5 @@
+v0.3
+Added fix for drones stuck in rockets (any stuck will be added back as prefabs).
+
 v0.2
 Added fix for maintenance stuck rockets (thanks BlakeMW/Jerigord).
