Expanded Cheat Menu:
Some buttons in examine weren't showing up when they should be.
Misc cleanup.

Solar Array Follows Sun v0.1:
The panels do it, why not the array panels?

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001421,,
+302535920001421,Shows list of particles to quickly test out on objects.,
 302535920001422,,
 302535920001423,,
 302535920001424,,
