Expanded Cheat Menu:
### Changed:
- Moved Drone Type from Mission to Drones (not sure why I put it there).
- Made Add Prefabs skip stuff that doesn't "prefab".

Fix: Rocket Stuck v0.4:
More stuck colonists, this time crew coming back from an expedition.

Map Images Pack v0.1
These are used in more than one of my mods, so no sense in having dupes.
This mod doesn't need to be enabled, just installed.

Minimap v0.1:
It's an image of the topography you can click on to move the camera around (useful for setting transport routes).
This is an image, so click target isn't perfect.

View Colony Map v0.9:
Requires https://steamcommunity.com/sharedfiles/filedetails/?id=1571465108
I've added another mod that also uses these images, so sharing is caring.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Fix Rocket Stuck/changes.txt
+++ b/Mods ChoGGi/Fix Rocket Stuck/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+More stuck colonists, this time crew coming back from an expedition.
+
 v0.3
 Added fix for drones stuck in rockets (any stuck will be added back as prefabs).
 
