Expanded Cheat Menu:
### Changed:
- Examine:
- > Attaches menu was clearing out colours from Colour Modifier.
- > Reworked the go to text/next button: it's no longer find as you type, see tooltips for more info.
- > Right-click Auto-Refresh to change update delay.

Added a few icons to tools menu (more to come).

Lib:
- Made my random colour func work better.
- Code cleanup.

Construction: Extend Length v0.2:
Added ModConfig options.

Defence Towers Attack DustDevils v0.5:
Towers are unlocked by default.

Fix: Rocket Stuck v0.6:
Expedition rocket "occupies" landing pad.

Mark Deposit Ground v0.3:
Added MC option for Vista/Research markers.

RC Bulldozer v0.7:
Now it actually uses Harvester model if you have Space Race.
Sounds.

RC Mechanic v0.6:
Sounds.

RC Miner v1.8:
Hopefully won't show up in the Buildings not working notification anymore...
Doesn't spin wheels for a sec or two when it stops moving.
Sounds.

Show Tunnel Lines v0.2:
Code cleanup.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,10 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001421,Shows list of particles to quickly test out on objects.,
-302535920001422,,
-302535920001423,,
-302535920001424,,
-302535920001425,,
-302535920001426,,
 302535920001427,,
 302535920001428,,
 302535920001429,,
@@ -124,7 +118,6 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920001297,Toggle Flight Grid,
 302535920001298,Shows a square grid with terrain/objects shape.,
 302535920001267,%s at position: %s was stopped.,
-302535920000967,Nothing selected.,
 302535920000968,Collisions,
 302535920000969,Collisions %s on %s,
 302535920000012,Error borked building: %s,
@@ -209,6 +202,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001305,Find Within,
 302535920001306,Enter text to find,
 302535920001304,Set how many levels within this table we check into (careful making it too large).,
+302535920001423,Close without doing anything.,
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
@@ -239,6 +233,11 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001424,"<left_click> Next, <right_click> Previous, <middle_click> Top",
+302535920001425,"<left_click> Toggle, <right_click> Set Delay",
+302535920001426,Various tools to use.,
+302535920001422,Right-click to change refresh delay.,
+302535920000967,Delay in ms between updating text.,
 302535920001248,Sort normally or backwards.,
 302535920001397,"These can be used as obj:GetNAME() / obj:SetNAME().
 You can access a default value with obj:GetDefaultPropertyValue(""NAME"")
@@ -276,11 +275,10 @@ This dialog will freeze till you click something.",
 302535920000323,Exec Code,
 302535920000239,Tools,
 302535920000228,Assign to,
-302535920000043,"Scrolls to text entered (press Enter to scroll between found text, Up arrow to scroll to top).",
+302535920000043,"Press Enter to scroll to next found text, Ctrl-Enter to scroll back, Arrows to scroll to each end.",
 302535920000044,Go To Text,
 302535920000045,"Scrolls down one line or scrolls between text in ""Go to text"".
-
-Right-click to scroll to top.",
+Right-click to go up, middle-click to scroll to the top.",
 302535920000046,dumps text to %sDumpedExamine.lua,
 302535920000047,"View text, and optionally dumps text to %sDumpedExamine.lua (don't use this option on large text).",
 302535920000048,View,
@@ -877,6 +875,7 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001421,Shows a list of particles you can use on the selected obj.,
 302535920001417,Follow Mouse Grid Size,
 302535920001418,Sets the size of the grid...,
 302535920001419,Follow Mouse Grid Trans,
