--- a/Mods ChoGGi/RC Miner/changes.txt
+++ b/Mods ChoGGi/RC Miner/changes.txt
@@ -1,3 +1,8 @@
+v1.8
+Hopefully won't show up in the Buildings not working notification anymore...
+Doesn't spin wheels for a sec or two when it stops moving.
+Sounds.
+
 v1.7
 Cleaning up code (ChoGGi's Library).
 
